feature - improve pom.xml

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -13,8 +13,8 @@
     <artifactId>core</artifactId>
 
     <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -50,7 +50,8 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- test -->
+        <!-- tests -->
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
