--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>spring-kotlin-reactive-maven-docker-app</name>
-	<description>Demo project for Spring Boot - Kotlin - Maven - Docker</description>
+	<description>Demo project for Spring Boot - Kotlin - Reactive - Maven - Docker</description>
 
     <modules>
         <module>core</module>
