feature - add maven-surefire-plugin plugin into the project

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -96,6 +96,18 @@
                 </executions>
             </plugin>
 
+            <!-- Executes all tests -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.5.2</version>
+                <configuration>
+                    <includes>
+                        <include>**/*</include>
+                    </includes>
+                </configuration>
+            </plugin>
+
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
