--- a/core/pom.xml
+++ b/core/pom.xml
@@ -96,7 +96,7 @@
                 </executions>
             </plugin>
 
-            <!-- Executes all tests -->
+            <!-- Run unit tests and integration tests during the test phase of the Maven build lifecycle -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
